terraform/terragrunt/local/kind-argocd/apps/sentiment-core/policies/cilium/cilium-network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sentiment-api
  namespace: sentiment
spec:
  endpointSelector:
    matchLabels:
      "k8s:app.kubernetes.io/name": sentiment-api
      "k8s:app.kubernetes.io/component": backend
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": azure-apim-sim
            "k8s:app.kubernetes.io/name": apim-sentiment
            "k8s:app.kubernetes.io/component": gateway
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": azure-apim-sim
            "k8s:app.kubernetes.io/name": apim-sentiment-uat
            "k8s:app.kubernetes.io/component": gateway
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
      authentication:
        mode: required
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": sentiment-llm
            "k8s:app.kubernetes.io/name": ollama
            "k8s:app.kubernetes.io/component": llm
      toPorts:
        - ports:
            - port: "11434"
              protocol: TCP
      authentication:
        mode: required
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ollama
  namespace: sentiment-llm
spec:
  endpointSelector:
    matchLabels:
      "k8s:app.kubernetes.io/name": ollama
      "k8s:app.kubernetes.io/component": llm
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "11434"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": sentiment
            "k8s:app.kubernetes.io/name": sentiment-api
            "k8s:app.kubernetes.io/component": backend
      toPorts:
        - ports:
            - port: "11434"
              protocol: TCP
      authentication:
        mode: required
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
